--- a/index.html
+++ b/index.html
@@ -78,7 +78,65 @@
 
         <!-- section 3 -->
         <section id="three">
-            
+            <div id="three-1">
+                <div id="three-1-wrapper">
+                    <h1>What will you learn</h1>
+                    <p>Hiragana and katakana — collectively referred to by the generic term kanamoji — are both syllabic alphabets of 47 characters, each of which represents a sound. Some of the characters between the two alphabets even represent the exact same sounds and look quite similar to one another.</p>
+                </div>
+            </div>
+            <div id="three-2">
+                <div id="three-cards">
+                    <div class="three-card">
+                        <h1>Kanji</h1>
+                        <p>Kanji alphabets through and through</p>
+                    </div>
+                    <div class="three-card">
+                        <h1>Hiragana</h1>
+                        <p>Hiragana alphabets through and through</p>
+                    </div>
+                    <div class="three-card">
+                        <h1>Katakana</h1>
+                        <p>Katakana alphabets through and through</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- section 4 -->
+        <section id="four">
+            <div id="four-wrapper">
+                <div id="wave-top-wrapper">
+                    <img id="wave-top" src="/imgs/wave-top.svg" alt="wave-top">
+                </div>
+                <div id="four-main">
+                    <div id="four-main-wrapper">
+                        <h1>Time Period</h1>
+                        <div id="four-cards">
+                            <div class="four-card">
+                                <p>3 Months</p>
+                                <h3>Intermidiate</h3>
+                            </div>
+                            <div class="four-card">
+                                <p>6 Months</p>
+                                <h3>Fluent</h3>
+                            </div>
+                            <div class="four-card">
+                                <p>12 Months</p>
+                                <h3>Bilingual</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="wave-bottom-wrapper">
+                    <img id="wave-bottom" src="/imgs/wave-bottom.svg" alt="wave-bottom">
+                </div>
+            </div>
+
+        </section>
+
+
+        <section>
+
         </section>
 
     </div>
